# Guitar-Tab-Tool-Tool

./: .gitignore  CHANGES.md  README.md  automation_script.py  live_tab.py  my_test_song.txt  note_to_tab.py  play_tab.py  pyproject.toml  requirements.txt  simple_test.py  test_live_tab.py  test_simple.tab
TabsBass/: tool-hush-bass.txt
TabsGuitar/: andy_strung.txt  iron_maiden-fear_of_the_dark.txt  mario_guitar.txt  safe_in_ny_city.txt  safein_nycity.txt  sanity_tr-lumessakahlaajat.txt  stevie_superstition.txt  timo_rautiainen-lumessakahlaajat.txt  tush-zztop.txt
scripts/: create_and_push.sh
tests/: __init__.py  test_note_to_tab.py
