[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-tab-tool"
version = "0.1.0"
description = "A lightweight command-line toolkit for working with guitar tablature"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Justus Valtonen", email = "justus.valtonen@example.com"}
]
keywords = ["guitar", "tab", "tablature", "midi", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Musicians",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

dependencies = [
    "mido>=1.3.0",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "pretty_midi>=0.2.10",
]

[project.optional-dependencies]
audio = ["pyaudio>=0.2.12", "soundfile>=0.12.0"]

[project.scripts]
play-tab = "play_tab:main"
live-tab = "live_tab:main"
note-to-tab = "note_to_tab:main"

[project.urls]
Homepage = "https://github.com/justusvaltonen/Guitar-Tab-Tool-Tool"
Documentation = "https://github.com/justusvaltonen/Guitar-Tab-Tool-Tool#readme"
Repository = "https://github.com/justusvaltonen/Guitar-Tab-Tool-Tool.git"
Issues = "https://github.com/justusvaltonen/Guitar-Tab-Tool-Tool/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["guitar_tab_tool*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests", "test_*.py"]
